--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-        <title>50 Projects In 50 Days</title>
+        <title>50 Projects In 50 Days Challenge</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
